# urp-academic-affairs-tools

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup-python/: action.yml
.github/workflows/: release.yml  ruff.yml
client/: __init__.py  api.py  session.py
export/: excel.py
parser/: __init__.py  evaluation.py  timetable.py
tests/: test_course_selection.py  test_gui_timetable.py  test_score_query.py  test_timetable.py
urp-academic-affairs-tools/: config.py  main.py
urp-academic-affairs-tools/client/: __init__.py  api.py
urp-academic-affairs-tools/export/: __init__.py
urp_academic_affairs_tools/: config.py  main.py
urp_academic_affairs_tools/client/: __init__.py  api.py  auth.py  captcha.py  errors.py  session.py
urp_academic_affairs_tools/course_selection/: __init__.py  course_selection.py
urp_academic_affairs_tools/export/: excel.py
urp_academic_affairs_tools/gui/: __init__.py  __main__.py  app.py
urp_academic_affairs_tools/gui/core/: __init__.py  async_worker.py
urp_academic_affairs_tools/gui/pages/: course_page.py  drop_page.py  evaluation_page.py  home_page.py  score_page.py  timetable_page.py
urp_academic_affairs_tools/gui/services/: __init__.py  urp_service.py
urp_academic_affairs_tools/gui/style/: __init__.py  style.py
urp_academic_affairs_tools/gui/widgets/: table_utils.py  timetable_grid.py
urp_academic_affairs_tools/parser/: __init__.py  evaluation.py  timetable.py
urp_academic_affairs_tools/score_query/: __init__.py  score_query.py
