[project]
name = "urp-academic-affairs-tools"
version = "0.2.2"
description = "URP Academic Affairs System Course Snatching Tool"
authors = [{ name = "Reversedeer", email = "ysjvillmark@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "onnxruntime (==1.23.2)",
    "ddddocr (==1.4.7)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "aioconsole (>=0.8.2,<0.9.0)",
    "pillow (==9.5.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[project.urls]
homepage = "https://github.com/Reversedeer/urp-academic-affairs-tools"
repository = "https://github.com/Reversedeer/urp-academic-affairs-tools.git"
Issues = "https://github.com/Reversedeer/urp-academic-affairs-tools/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
black = "^26.1.0"

[tool.ruff]
line-length = 88

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "C90",   # mccabe
    "N",     # PEP8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "I",     # isort
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "FAST",  # FastAPI
    "PERF",  # Perflint
    "FURB",  # refurb
    "RUF",   # Ruff-specific rules
]

ignore = [
    "E501",   # line too long
    "B008",   # do not perform function calls in argument defaults
    "RUF001", # use of assertRaisesRegexp is deprecated
    "RUF002", # use of assertRaisesRegexp is deprecated
    "RUF003", # use of assertRaisesRegexp is deprecated
    "S105",
    "S324",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
extra-standard-library = ["typing_extensions"]